Timetable editable status prototype done
