# app/Http/Controllers/Api/v1/Controller.php
@@ -33,13 +33,13 @@ use Illuminate\Routing\Controller as BaseController;
  * )
  *
  * @OA\Tag(
- *     name="Timetable",
+ *     name="Timetables",
  *     description="Timetable Endpoints"
  * )
  *
  * @OA\Tag(
  *     name="Utillities",
- *     description="Utillities Endpoints"
+ *     description="Utillity Endpoints"
  * )
  */
 class Controller extends BaseController
@@ -57,7 +57,7 @@ class Controller extends BaseController
         // $this->middleware('auth:sanctum');
     }
 
-        /**
+    /**
      * success response method.
      *
      * @return \Illuminate\Http\Response
