# routes/api_v1.php
@@ -4,8 +4,9 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
 use App\Http\Controllers\Api\v1\AuthController;
-use App\Http\Controllers\Api\v1\UserController;
 use App\Http\Controllers\Api\v1\UtillityController;
+use App\Http\Controllers\Api\v1\UserController;
+use App\Http\Controllers\Api\v1\UserTimetableController;
 use App\Http\Controllers\Api\v1\TimetableController;
 
 /*
@@ -29,7 +30,11 @@ Route::middleware(['auth:sanctum', 'verified'])->group(function ()
     //     return $request->user();
     // });
 
-    // Route::apiResource('user', UserController::class);
+    Route::apiResource('user', UserController::class)
+        ->except(['destroy']);
+
+    Route::apiResource('user.timetable', UserTimetableController::class)
+        ->except(['store', 'update', 'destroy']);
 
     Route::apiResource('timetable', TimetableController::class)
         ->except(['destroy']);
