# storage/api-docs/api-docs.json
@@ -84,6 +84,128 @@
                 }
             }
         },
+        "/timetable": {
+            "get": {
+                "tags": [
+                    "Timetables"
+                ],
+                "summary": "Timetable index",
+                "description": "Display a listing of the resource.",
+                "operationId": "getAllTimetable",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Timetables"
+                ],
+                "summary": "Timetable store",
+                "description": "Store a newly created resource in storage.",
+                "operationId": "createTimetable",
+                "parameters": [
+                    {
+                        "name": "date",
+                        "in": "query",
+                        "description": "Date",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/timetable/{timetableID}": {
+            "get": {
+                "tags": [
+                    "Timetables"
+                ],
+                "summary": "Timetable show",
+                "description": "Display the specified resource.",
+                "operationId": "getTimetable",
+                "parameters": [
+                    {
+                        "name": "timetableID",
+                        "in": "path",
+                        "description": "timetableID",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Timetables"
+                ],
+                "summary": "Timetable update",
+                "description": "Update the specified resource by ID or Date",
+                "operationId": "updateTimetable",
+                "parameters": [
+                    {
+                        "name": "timetableID",
+                        "in": "path",
+                        "description": "timetableID",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "status",
+                        "in": "query",
+                        "description": "Status",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/user": {
             "get": {
                 "tags": [
@@ -92,6 +214,48 @@
                 "summary": "Get current User",
                 "description": "Get current User",
                 "operationId": "getUser",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/user/{userID}/timetable": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Timetable index",
+                "description": "Display a listing of the resource.",
+                "operationId": "getUserAllTimetable",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/user/{userID}/timetable/{timetableID}": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Timetable show",
+                "description": "Display the specified resource.",
+                "operationId": "getUserTimetable",
                 "responses": {
                     "200": {
                         "description": "Successful operation"
@@ -266,8 +430,12 @@
             "description": "Authentification Endpoints"
         },
         {
+            "name": "Timetables",
+            "description": "Timetable Endpoints"
+        },
+        {
             "name": "Utillities",
-            "description": "Utillities Endpoints"
+            "description": "Utillity Endpoints"
         }
     ]
 }
